--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.1",
     "react-router": "^7.6.2",
     "socket.io-client": "^4.8.1",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8",
-    "zod": "^3.25.61"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
