--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   workflow_run:
-    workflows: ["Release"]
+    workflows: ["Publish"]
     types:
       - completed
 
@@ -19,7 +19,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment:
-      name: "production"
+      name: "prod"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     steps:
       - name: Checkout code
